# OSUREG

./: .gitignore  pyproject.toml  readme.md
src/osureg/: __init__.py  dsm_reg.py  feature_matching.py  main.py
src/osureg/g2a/: line_matching.py  lsd_deep.py  preprocess.py
src/osureg/preprocessing/: preprocess.py
src/osureg/registration/: apply.py  dsm.py  icp.py
src/vcd/: main.py
src/vcd/preprocessing/: preprocess.py
